--- a/tests/yaml/A_Decorators_0005.yml
+++ b/tests/yaml/A_Decorators_0005.yml
@@ -3,15 +3,15 @@ pipelines:
   decorators:
   - name: decorator1
     execution:
-      onBeforeStart:
+      beforeOnStart:
       - x=10
-      onAfterStart:
+      afterOnStart:
       - if [ $x -ne 40 ]; then exit 1; fi
   - name: decorator2
     execution:
-      onBeforeStart:
+      beforeOnStart:
       - x=$x+10
-      onAfterStart:
+      afterOnStart:
       - x=$x+10
   steps:
   - name: A_Decorators_0005
